[gd_scene load_steps=3 format=3 uid="uid://xcfsw8oy5vr0"]

[ext_resource type="Script" path="res://core/vb_colors.gd" id="1_inm54"]
[ext_resource type="PackedScene" uid="uid://cv125qa53qqhg" path="res://core/hb_color_item.tscn" id="1_v7rhg"]

[node name="VBColors" type="VBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_inm54")

[node name="HeaderButton" type="Button" parent="."]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Цвета сценария"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="ColorItems" type="BoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
vertical = true

[node name="HBColorItem" parent="VBoxContainer/ScrollContainer/ColorItems" instance=ExtResource("1_v7rhg")]
layout_mode = 2
default = true

[node name="BtnAdd" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Добавить"

[connection signal="toggled" from="HeaderButton" to="." method="_on_header_button_toggled"]
[connection signal="pressed" from="VBoxContainer/BtnAdd" to="." method="_on_btn_add_pressed"]
